# so100-mujoco-rl

./: .gitignore  README.md  pyproject.toml
scripts/: download.py
src/so100_mujoco_rl/: __init__.py  arm_control.py  main.py  real.py
src/so100_mujoco_rl/envs/: env01_v1.py  env02_v1.py  env03_v1.py  env04_v1.py  env05_v1.py  env06_v1.py  env_base_01.py  env_base_02.py  env_base_06.py  tracker.yaml  utils.py
src/so100_mujoco_rl/envs/model/: .gitignore  env01.xml  env06.xml  so_arm100_camera.xml
