[project]
authors = [{name = "Lachlan Hurst", email = "lachlan.hurst@gmail.com"}]
name = "so100-mujoco-rl"
requires-python = ">= 3.10"
version = "0.1.0"
dependencies = [
    "requests>=2.32.3,<3",
    "stable-baselines3>=2.6.0,<3",
    "mujoco>=3.3.1,<4",
    "click>=8.1.8,<9",
    "scipy>=1.15.2,<2",
    "imageio>=2.37.0,<3",
    "gymnasium[other]>=1.1.1,<2",
    "tensorboard>=2.19.0,<3",
    "standard-imghdr>=3.13.0,<4",
    "pillow>=11.2.0,<12",
    "ultralytics>=8.3.114,<9"
, "opencv-python>=4.11.0.86,<5", "lap>=0.5.12,<0.6", "draccus>=0.11.5,<0.12", "feetech-servo-sdk>=1.0.0,<2"]


[tool.hatch.build.targets.wheel]
packages = ["src/so100_mujoco_rl"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
so100_mujoco_rl = { path = ".", editable = true }

[tool.pixi.tasks]
download = { cmd = "python scripts/download.py" }
main = { cmd = "python src/so100_mujoco_rl/main.py" }
real = { cmd = "python src/so100_mujoco_rl/real.py" }
tensorboard = { cmd = "tensorboard --logdir=logs" }

[tool.pixi.dependencies]
python = "3.10"
